solve spacing problems of sidebar

--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -7,7 +7,7 @@
   left: 0;
   background-color: #24527A;
   overflow-x: hidden;
-  padding-top: 16px;
+  // padding-top: 16px;
   position: sticky!important;
   top: 0!important;
   float: left;
@@ -18,18 +18,24 @@
   }
 }
 
+.sidebar-content > li {
+  margin: 24px 0px;
+  display: block;
+}
+
 /* Style sidebar links */
-.sidebar-links a {
+.sidebar-content a {
   padding: 6px 8px 6px 16px;
   font-size: 16px;
   color: white;
   text-decoration: none;
-  // display: block;
+  display: block;
 }
 
 .delivery-list li {
   position: relative;
   text-align: center;
+  margin: 12px 0px;
 }
 
 .delivery-list li a:before {
